--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
       <div class="swiper-slide">
            <div class="row slider-text">
                <div class="col-sm-6">
-                  <h3>Perfect product!</h3>
-                  <p>It is a long established fact that a reader will be distracted by the readable
-                  content of a page when looking at its layout. 
-                  Many desktop publishing packages and web page editors now use Lorem Ipsum as their default 
-                  model text, and a search for lorem ipsum will uncover.
+                  <h3>Exceptional IT developer</h3>
+                  <p>Stanley is an exceptional IT developer who consistently delivers high-quality code and solutions. 
+                    Her attention to detail and problem-solving skills are remarkable. She consistently meets project
+                     deadlines and communicates effectively with the team. His work has significantly improved our
+                     system's performance and stability. I highly recommend John for any IT development project.
                   <br><span><img src=".https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
@@ -151,7 +151,7 @@
                   </span><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                   </p> 
                   <h6 class="name">Edward Kennedy</h6>
-                  <h6 class="tag">happy buyer</h6>
+                  <h6 class="tag">Team Lead, Global Innovative Institute</h6>
                </div>
                <div class="col-sm-6"><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/profile2.jpg"></div>
            </div>
@@ -159,11 +159,11 @@
       <div class="swiper-slide">
            <div class="row slider-text">
               <div class="col-sm-6">
-                <h3>Perfect product!</h3>
-                 <p>It is a long established fact that a reader will be distracted by the readable
-                 content of a page when looking at its layout. 
-                 Many desktop publishing packages and web page editors now use Lorem Ipsum as their default 
-                  model text, and a search for lorem ipsum will uncover.
+                <h3>Top-notch Research Skill</h3>
+                 <p>Chiamaka is a highly skilled IT developer with a deep understanding of various programming languages and 
+                  frameworks. She has a knack for simplifying complex problems and developing elegant solutions. 
+                  Chi's code is always clean, well-documented, and easy to maintain. She takes the initiative to research 
+                  and implement the latest technologies, which has significantly improved our application's user experience.
                   <br><span><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
@@ -171,7 +171,7 @@
                   </span><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                  </p>
                   <h6 class="name">Sussan Barkley</h6>
-                  <h6 class="tag">happy buyer</h6>
+                  <h6 class="tag">Senior Developer, Heybassh</h6>
               </div>
               <div class="col-sm-6"><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/profile1.jpg"></div>
            </div>
@@ -179,11 +179,10 @@
       <div class="swiper-slide">
            <div class="row slider-text">
               <div class="col-sm-6 ">
-                 <h3>Perfect product!</h3>
-                 <p>It is a long established fact that a reader will be distracted by the readable
-                 content of a page when looking at its layout. 
-                 Many desktop publishing packages and web page editors now use Lorem Ipsum as their default 
-                  model text, and a search for lorem ipsum will uncover.
+                 <h3>Highly Motivated</h3>
+                 <p>Lisa is a highly motivated and talented IT developer who consistently goes above and beyond to deliver exceptional results.
+                   Her problem-solving skills are exceptional, and she is always willing to take on new challenges. Her attention to detail and commitment 
+                    to producing high-quality work have been instrumental in the success of our projects.
                   <br><span><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
@@ -191,7 +190,7 @@
                   </span><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                  </p>
                   <h6 class="name">Pamela Chris</h6>
-                  <h6 class="tag">happy buyer</h6>
+                  <h6 class="tag">IT Supervisor, Heybassh</h6>
               </div>
               <div class="col-sm-6"><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/profile5.jpg"></div>
            </div>
