--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
            <div class="row slider-text">
               <div class="col-sm-6 ">
                  <h3>Highly Motivated</h3>
-                 <p>Lisa is a highly motivated and talented IT developer who consistently goes above and beyond to deliver exceptional results.
+                 <p>Chiamaka is a highly motivated and talented IT developer who consistently goes above and beyond to deliver exceptional results.
                    Her problem-solving skills are exceptional, and she is always willing to take on new challenges. Her attention to detail and commitment 
                     to producing high-quality work have been instrumental in the success of our projects.
                   <br><span><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
