--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                   </span><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                  </p>
-                  <h6 class="name">Sussan Barkley</h6>
+                  <h6 class="name">Pamela Zuzinni</h6>
                   <h6 class="tag">Senior Developer, Heybassh</h6>
               </div>
-              <div class="col-sm-6"><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/profile1.jpg"></div>
+              <div class="col-sm-6"><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/profile5.jpg"></div>
            </div>
       </div>
       <div class="swiper-slide">
@@ -189,10 +189,10 @@
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                   </span><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                  </p>
-                  <h6 class="name">Pamela Chris</h6>
+                  <h6 class="name">Sussan Barkley</h6>
                   <h6 class="tag">IT Supervisor, Heybassh</h6>
               </div>
-              <div class="col-sm-6"><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/profile5.jpg"></div>
+              <div class="col-sm-6"><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/profile1.jpg"></div>
            </div>
       </div>
     </div>
