--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="second-detail">
             <div><label>Nationality:</label>Nigerian</div>
             <div><label>E-mail:</label>stanleychya@gmail.com</div>
-            <div style="color: black; text-decoration: none;"><label>Phone:</label>+234 8167 5094 17</div>
+            <div><label>Phone:</label>+234 8167 5094 17</div>
         </div>
     </div>
     
