--- a/index.html
+++ b/index.html
@@ -203,6 +203,12 @@
 </div>
 </div>
 
+<div class="section certificate">
+  <h1>ADSE</h1>
+  <h1>-APTECH-</h1>
+  <h1>MSCE</h1>
+</div>
+
 <div class="section footer" id="footer">
   <div class="form-text">
     <h1>Get In Touch</h1>
