--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 <div class="section footer" id="footer">
   <div class="form-text">
     <h1>Get In Touch</h1>
-    <p>Send a message to connect with me</p>
+    <p>Send a message, Let's talk today!</p>
 </div>
 <form>
     <h2>Contact Us</h2>
