--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
    <div class="project-display">
       <div class="project">
         <img src="./images/html-project.png">
+        <h3>MY PORTFOLIO: <span class="tech-used">HTML, CSS, JS</span></h3>
         <div class="pro-btnn-group">
           <a href="https://stanleyport.vercel.app"><button class="pro-btnn">Demo</button></a>
           <a href="https://github.com/Janefrancess/My-Portfolio"> <button class="pro-btnn">Code</button></a>
@@ -118,6 +119,7 @@
       </div>
       <div class="project">
         <img src="./images/React-project.png">
+        <h3>SAMPLE PORT: <span class="tech-used">REACT, HTML, CSS, JS</span></h3>
         <div class="pro-btnn-group">
           <a href="https://stanley-chi.vercel.app"><button class="pro-btnn">Demo</button></a>
           <a href="https://github.com/Janefrancess/React-Sample-Portfolio"><button class="pro-btnn">Code</button></a>
@@ -125,9 +127,32 @@
       </div>
       <div class="project">
         <img src="./images/heybassh-moduler.png">
+        <h3>POOPEMSCOOPEM: <span class="tech-used">REACT JS, HTML, CSS, JS</span></h3>
         <div class="pro-btnn-group">
           <a href="https://heybassh.com"><button class="pro-btnn">Demo</button></a> 
           <a href="https://github.com/Janefrancess"><button class="pro-btnn">Code</button></a>
+        </div>
+      </div>
+      <div class="project">
+        <img src="./images/heybassh-moduler.png">
+        <h3>USEPOPCORN: <span class="tech-used">REACT JS, HTML, CSS, JS</span></h3>
+        <div class="pro-btnn-group">
+          <a href="https://heybassh.com"><button class="pro-btnn">Demo</button></a> 
+          <a href="https://github.com/Janefrancess"><button class="pro-btnn">Code</button></a>
+        </div>
+      </div>
+      <div class="project">
+        <img src="./images/heybassh-moduler.png">
+        <h3>MSC CRUISES: <span class="tech-used">HUBL, HTML, CSS, JS</span></h3>
+        <div class="pro-btnn-group">
+          <a href="https://www.hupla.co/en/cruise-destinations/southern-africa/msc-cruises/all-specials-in-south-africa"><button class="pro-btnn">Demo</button></a> 
+        </div>
+      </div>
+      <div class="project">
+        <img src="./images/heybassh-moduler.png">
+        <h3>UKHAMBA: <span class="tech-used">WORDPRESS, WOOCOMMERCE, CSS, JS</span></h3>
+        <div class="pro-btnn-group">
+          <a href="https://ukhamba.heybassh.com/"><button class="pro-btnn">Demo</button></a>
         </div>
       </div>
    </div>
