--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
                     Her attention to detail and problem-solving skills are remarkable. She consistently meets project
                      deadlines and communicates effectively with the team. His work has significantly improved our
                      system's performance and stability. I highly recommend John for any IT development project.
-                  <br><span><img src=".https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
+                  <br><span>
+                    <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
