--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@
         <img src="./images/react.png">
         <h3>SAMPLE PORT</h3>
         <div class="pro-btnn-group">
-          <a href="https://stanley-chi.vercel.app"><button class="pro-btnn">Demo</button></a>
-          <a href="https://github.com/Janefrancess/React-Sample-Portfolio"><button class="pro-btnn">Code</button></a>
+          <a href="https://sampleport-ten.vercel.app/"><button class="pro-btnn">Demo</button></a>
+          <a href="https://github.com/Janefrancess/Sample-port"><button class="pro-btnn">Code</button></a>
         </div>
       </div>
       <div class="project">
         <img src="./images/poopem.png">
         <h3>POOPEMSCOOPEM</h3>
         <div class="pro-btnn-group">
-          <a href="https://poopemscoop.netlify.app"><button class="pro-btnn">Demo</button></a> 
+          <a href="https://poopemcsoop.vercel.app/"><button class="pro-btnn">Demo</button></a> 
           <a href="https://github.com/Janefrancess/Poopemscoopem"><button class="pro-btnn">Code</button></a>
         </div>
       </div>
