--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             <div><label>  Work zone</label>Hybid/Remote</div>
             <div><label>Occupation</label>Web developer</div>
             <div class="socials-group">
+                <a href="https://www.linkedin.com/in/chi-stanley-b16545238" class="linkedin"><i class="fab fa fa-linkedin" aria-hidden="true"></i></a>
                 <a href="#" class="facebook"><i class="fab fa fa-facebook" aria-hidden="true"></i></a>
                 <a href="#" class="twitter"><i class="fab fa fa-twitter" aria-hidden="true"></i></a>
                 <a href="#" class="instagram"><i class="fab fa fa-instagram" aria-hidden="true"></i></a>
-                <a href="#" class="linkedin"><i class="fab fa fa-linkedin" aria-hidden="true"></i></a>
             </div>
         </div>
         <div class="second-detail">
