--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <img src="./images/html.png">
             <img src="./images/css.png">
             <img src="./images/javascript.png">
-            <img src="./images/react.png">
+            <img src="./images/reactse.png">
             <img src="./images/tailwind.png">
             <img src="./images/github.png">
             <img src="./images/node.png">
