--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 </div>
 </div>
 
-<div class="section certificate">
+<div class="section certificate" id="certification">
   <h1>ADSE</h1>
   <h1>-APTECH-</h1>
   <h1>MSCE</h1>
