New portfolio project
New portfolio project added - Waterco wordpress website

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
           <a href="https://stanleyport.vercel.app"><button class="pro-btnn">Demo</button></a>
           <a href="https://github.com/Janefrancess/My-Portfolio"> <button class="pro-btnn">Code</button></a>
         </div>
+        <p>Technology Used: HTML, CSS, JAVASCRIPT</p>
       </div>
       <div class="project">
         <img src="./images/react.png">
@@ -126,6 +127,7 @@
           <a href="https://sampleport-ten.vercel.app/"><button class="pro-btnn">Demo</button></a>
           <a href="https://github.com/Janefrancess/Sample-port"><button class="pro-btnn">Code</button></a>
         </div>
+        <p>Technology Used: REACT, TAILWIND, HTML</p>
       </div>
       <div class="project">
         <img src="./images/poopem.png">
@@ -134,13 +136,15 @@
           <a href="https://poopemcsoop.vercel.app/"><button class="pro-btnn">Demo</button></a> 
           <a href="https://github.com/Janefrancess/Poopemscoopem"><button class="pro-btnn">Code</button></a>
         </div>
+        <p>Technology Used: REACT, HTML, CSS</p>
       </div>
       <div class="project">
         <img src="./images/msc.png">
         <h3>MSC CRUISES</h3>
         <div class="pro-btnn-group">
-          <a href="https://www.hupla.co/en/cruise-destinations/southern-africa/msc-cruises/all-specials-in-south-africa"><button class="pro-btnn">Demo</button></a> 
+          <a href="https://www.hupla.co/en/cruises/filter"><button class="pro-btnn">Demo</button></a> 
         </div>
+        <p>Technology Used: HUBSPOT, HUBL, API, CSS, JAVASCRIPT,</p>
       </div>
       <div class="project">
         <img src="./images/ukhamba.png">
@@ -148,6 +152,15 @@
         <div class="pro-btnn-group">
           <a href="https://ukhamba.heybassh.com/"><button class="pro-btnn">Demo</button></a>
         </div>
+        <p>Technology Used: WORDPRESS, CSS, JAVASCRIPT, PHP</p>
+      </div>
+      <div class="project">
+        <img src="./images/waterco.png">
+        <h3>WATERCO</h3>
+        <div class="pro-btnn-group">
+          <a href="https://swift-organization.flywheelsites.com/"><button class="pro-btnn">Demo</button></a>
+        </div>
+        <p>Technology Used: WORDPRESS, CSS, JAVASCRIPT</p>
       </div>
    </div>
 </div>
