--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h2 class="name">I'm <span class="orange-text"></span></h2>
 <p class="intro-text">A Frontend Web Developer & UI/UX designer. A Nigerian Female Lead<br> Technological Ambassador and Youth Innovator.</p>
 <div class="cv-download">
-  <a href="./file/ChyaStanley.pdf">
+  <a href="./StanleyChiamakaResume.pdf">
     <button class="cv-btnn">Download Cv</button>
   </a>
 </div>
