--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h3 class="greeting">HELLO!</h3>
 <h2 class="medium-text"><b class="bold-text">I'm</b> Stanley Chiamaka Francess</h2>
 <h2 class="name">I'm <span class="orange-text"></span></h2>
-<p class="intro-text">A Frontend Web Developer & UI/UX designer. A Nigerian Female Lead<br> Technological Ambassador and Youth Innovator.</p>
+<p class="intro-text">A Frontend Web Developer, UX Designer and Solution finder. A Female Lead <br> Technological Ambassador and Youth Innovator</p>
 <div class="cv-download">
   <a href="./StanleyChiamakaResume.pdf">
     <button class="cv-btnn">Download Cv</button>
@@ -58,13 +58,11 @@
 <div class="profile-content">
    <div class="profile-content-intro">
        <h1>PROFILE</h1>
-       <p class="description">My name is Stanley Francess. I am a Professional UI/UX designer and frontend developer. 
-           I have taken part in developing UDesign theme, one of the most famous theme in the world.
-          Everyone can make website easily with UDesign, which offers various options and also make your site speed fast.
-       </p>
-       <div class="view-more">
-          <a class="view-link"><span class="view-text">VIEW MORE&nbsp;</span><img src="./icons/port-down.png" class="more-icon"></a>
-      </div>
+       <p class="description">My name is Stanley Chiamaka Francess, a front-end developer with expertise in JavaScript, 
+        React, HTML, and CSS. I specialize in creating responsive, user-centric websites—from simple applications like ecommerce sites to fully 
+        optimized React-based projects. I combine clean, maintainable code with creative design principles to deliver seamless digital experiences.
+        I’m proficient in development and content managemnet tools such as Wordpress, Hubspot, GitHub, and Netlify, and enthusiastic about joining 
+        a collaborative team where I can contribute meaningfully and continue to grow.</p>
 </div>
 <div class="profile-content-detail">
     <h3>General Info</h3>
@@ -74,16 +72,16 @@
             <div><label>  Work zone</label>Hybid/Remote</div>
             <div><label>Occupation</label>Web developer</div>
             <div class="socials-group">
-                <a href="https://www.linkedin.com/in/chi-stanley-b16545238" class="linkedin"><i class="fab fa fa-linkedin" aria-hidden="true"></i></a>
-                <a href="#" class="facebook"><i class="fab fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/chiamaka-francess-stanley-b16545238" class="linkedin"><i class="fab fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://github.com/Janefrancess" class="facebook"><i class="fab fa fa-github" aria-hidden="true"></i></a>
                 <a href="#" class="twitter"><i class="fab fa fa-twitter" aria-hidden="true"></i></a>
                 <a href="#" class="instagram"><i class="fab fa fa-instagram" aria-hidden="true"></i></a>
             </div>
         </div>
         <div class="second-detail">
-            <div><label>Nationality:</label>Nigerian</div>
+            <div><label>Work experience:</label>6+ Years</div>
             <div><label>E-mail:</label>stanleychya@gmail.com</div>
-            <div><label>Phone:</label>+234 8167 5094 17</div>
+            <div><label>Phone:</label>470-557-5979</div>
         </div>
     </div>
     
@@ -112,22 +110,39 @@
    <h1>PORTFOLIO</h1>
    <div class="project-display">
       <div class="project">
-        <img src="./images/port.png">
-        <h3>MY PORTFOLIO</h3>
+        <img src="./images/ukhamba.png">
+        <h3>UKHAMBA BEERWORX</h3>
         <div class="pro-btnn-group">
-          <a href="https://stanleyport.vercel.app"><button class="pro-btnn">Demo</button></a>
-          <a href="https://github.com/Janefrancess/My-Portfolio"> <button class="pro-btnn">Code</button></a>
+          <a href="https://ukhamba.heybassh.com/"><button class="pro-btnn">Demo</button></a>
         </div>
-        <p>Technology Used: HTML, CSS, JAVASCRIPT</p>
       </div>
       <div class="project">
-        <img src="./images/react.png">
-        <h3>SAMPLE PORT</h3>
+        <img src="./images/neen.png">
+        <h3>NEEN EYEWEAR</h3>
         <div class="pro-btnn-group">
-          <a href="https://sampleport-ten.vercel.app/"><button class="pro-btnn">Demo</button></a>
-          <a href="https://github.com/Janefrancess/Sample-port"><button class="pro-btnn">Code</button></a>
+          <a href="https://neeneyewear.com"><button class="pro-btnn">Demo</button></a>
         </div>
-        <p>Technology Used: REACT, TAILWIND, HTML</p>
+      </div>
+       <div class="project">
+        <img src="./images/k2mg.png">
+        <h3>K2 MANAGEMENT</h3>
+        <div class="pro-btnn-group">
+          <a href="https://www.k2management.com"><button class="pro-btnn">Demo</button></a>
+        </div>
+      </div>
+       <div class="project">
+        <img src="./images/oppworks.png">
+        <h3>OPPORTUNITY WORKS</h3>
+        <div class="pro-btnn-group">
+          <a href="https://opportunity-works.org"><button class="pro-btnn">Demo</button></a>
+        </div>
+      </div>
+      <div class="project">
+        <img src="./images/msc.png">
+        <h3>MSC CRUISES</h3>
+        <div class="pro-btnn-group">
+          <a href="https://www.hupla.co/en/cruises/filter"><button class="pro-btnn">Demo</button></a> 
+        </div>
       </div>
       <div class="project">
         <img src="./images/poopem.png">
@@ -136,46 +151,38 @@
           <a href="https://poopemcsoop.vercel.app/"><button class="pro-btnn">Demo</button></a> 
           <a href="https://github.com/Janefrancess/Poopemscoopem"><button class="pro-btnn">Code</button></a>
         </div>
-        <p>Technology Used: REACT, HTML, CSS</p>
       </div>
       <div class="project">
-        <img src="./images/msc.png">
-        <h3>MSC CRUISES</h3>
+        <img src="./images/react.png">
+        <h3>CHIPORTFOLIO</h3>
         <div class="pro-btnn-group">
-          <a href="https://www.hupla.co/en/cruises/filter"><button class="pro-btnn">Demo</button></a> 
+          <a href="https://sampleport-ten.vercel.app/"><button class="pro-btnn">Demo</button></a>
+          <a href="https://github.com/Janefrancess/Sample-port"><button class="pro-btnn">Code</button></a>
         </div>
-        <p>Technology Used: HUBSPOT, HUBL, API, CSS, JAVASCRIPT,</p>
       </div>
       <div class="project">
-        <img src="./images/ukhamba.png">
-        <h3>UKHAMBA</h3>
+        <img src="./images/port.png">
+        <h3>MY PORTFOLIO</h3>
         <div class="pro-btnn-group">
-          <a href="https://ukhamba.heybassh.com/"><button class="pro-btnn">Demo</button></a>
+          <a href="https://stanleyport.vercel.app"><button class="pro-btnn">Demo</button></a>
+          <a href="https://github.com/Janefrancess/My-Portfolio"> <button class="pro-btnn">Code</button></a>
         </div>
-        <p>Technology Used: WORDPRESS, CSS, JAVASCRIPT, PHP</p>
-      </div>
-      <div class="project">
-        <img src="./images/waterco.png">
-        <h3>WATERCO</h3>
-        <div class="pro-btnn-group">
-          <a href="https://swift-organization.flywheelsites.com/"><button class="pro-btnn">Demo</button></a>
-        </div>
-        <p>Technology Used: WORDPRESS, CSS, JAVASCRIPT</p>
       </div>
    </div>
 </div>
 
 <div class="section testimonial" id="testimonial">
+  <h1>TESTIMONIAL</h1>
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
            <div class="row slider-text">
                <div class="col-sm-6">
                   <h3>Exceptional IT developer</h3>
-                  <p>Stanley is an exceptional IT developer who consistently delivers high-quality code and solutions. 
+                  <p>Chiamaka is an exceptional IT developer who consistently delivers high-quality code and solutions. 
                     Her attention to detail and problem-solving skills are remarkable. She consistently meets project
-                     deadlines and communicates effectively with the team. His work has significantly improved our
-                     system's performance and stability. I highly recommend John for any IT development project.
+                     deadlines and communicates effectively with the team. Her work has significantly improved our
+                     system's performance and stability. I highly recommend her for any IT development project.
                   <br><span>
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
@@ -183,10 +190,10 @@
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                   </span><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                   </p> 
-                  <h6 class="name">Edward Kennedy</h6>
-                  <h6 class="tag">Team Lead, Global Innovative Institute</h6>
+                  <h6 class="name">Seyi Falaye</h6>
+                  <h6 class="tag">Team Lead, Global innovative institute</h6>
                </div>
-               <div class="col-sm-6"><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/profile2.jpg"></div>
+               <div class="col-sm-6"><img src="./images/giit-logo.png"></div>
            </div>
       </div>
       <div class="swiper-slide">
@@ -203,10 +210,10 @@
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                   </span><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                  </p>
-                  <h6 class="name">Pamela Zuzinni</h6>
-                  <h6 class="tag">Senior Developer, Heybassh</h6>
+                  <h6 class="name">Bachot Mpunga</h6>
+                  <h6 class="tag">Senior Developer/Founder, Heybassh</h6>
               </div>
-              <div class="col-sm-6"><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/profile5.jpg"></div>
+              <div class="col-sm-6"><img src="./images/heybassh.png"></div>
            </div>
       </div>
       <div class="swiper-slide">
@@ -222,10 +229,10 @@
                     <img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                   </span><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/star-rating.png" style="width: 15px; height:15px; display: inline; margin-top: 20px;">
                  </p>
-                  <h6 class="name">Sussan Barkley</h6>
-                  <h6 class="tag">IT Supervisor, Heybassh</h6>
+                  <h6 class="name">Olivis</h6>
+                  <h6 class="tag">IT Lead manager, comegetcred</h6>
               </div>
-              <div class="col-sm-6"><img src="https://501112.fs1.hubspotusercontent-na1.net/hubfs/501112/Palesa/Real%20estate/screenshot/Elementor1/profile1.jpg"></div>
+              <div class="col-sm-6"><img src="./images/comeget.png"></div>
            </div>
       </div>
     </div>
